--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li class="list-group-item">
             <span class="dark-mode">Dark Mode🔄 </span>
         </li>
-        <li class="list-group-item"><a href="/detail.html">Detail</a></li>
+        <li class="list-group-item"><span onclick="location.href='detail.html'">Detail</span></li>
         <li class="list-group-item">A third item</li>
         <li class="list-group-item">A fourth item</li>
         <li class="list-group-item">And a fifth one</li>
