--- a/product-list.html
+++ b/product-list.html
@@ -63,7 +63,7 @@
                             <p>가격 : ${item.price}원</p>
                         </div>`;
                     $('.row').append(template);
-
+                    products.push(item);
                 })
                 moreCount++;
             }
@@ -84,8 +84,20 @@
             }
 
             let array = [7, 3, 5, 2, 40];
-            // 문자 정렬
+            // 문자 정렬(desc)
             array.sort();
+
+            // 문자 정렬(asc)
+            array.sort((a, b)=>{
+                if(a < b){
+                    return 1;
+                } else if(a > b) {
+                    return -1;
+                } else {
+                    // a == b
+                    return 0;
+                }
+            })
 
             // 숫자 정렬
             array.sort((a, b) => {
@@ -108,7 +120,7 @@
             let newArray2 = array.map((a)=>{
                 // 어레이 자료에 전부 4를 곱한채로 newArray2에 저장
                 return a * 4;
-            })
+            });
 
             // .sort() : 원본 변형 O
             // .filter(), .map() : 원본 변형 X
@@ -117,7 +129,7 @@
             const priceDownSort = () => {
                 products.sort((a, b) => {
                     return a.price - b.price;
-                })
+                });
                 $('.row').html('');
                 products.forEach((item) => {
                     let template = `
@@ -127,13 +139,13 @@
                             <p>가격 : ${item.price}원</p>
                         </div>`;
                     $('.row').append(template);
-                })
+                });
             }
 
             const priceUpSort = () => {
                 products.sort((a, b) => {
                     return b.price - a.price;
-                })
+                });
                 $('.row').html('');
                 products.forEach((item) => {
                     let template = `
@@ -143,7 +155,7 @@
                             <p>가격 : ${item.price}원</p>
                         </div>`;
                     $('.row').append(template);
-                })
+                });
             }
 
             const titleUpSort = () => {
@@ -165,7 +177,7 @@
                             <p>가격 : ${item.price}원</p>
                         </div>`;
                     $('.row').append(template);
-                })
+                });
             }
 
             const priceSelect = (price) => {
@@ -181,9 +193,9 @@
                             <p>가격 : ${item.price}원</p>
                         </div>`;
                     $('.row').append(template);
-                })
+                });
             }
-
+            
         </script>
 
 
