--- a/sticky.html
+++ b/sticky.html
@@ -6,12 +6,25 @@
     <link href="css/sticky.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body style="background: grey; height: 3000px;">
+<body style="background: grey; height: 1500px;">
     <div class="grey">
+        <!-- position: sticky (조건부 fixed) -->
         <div class="image">
             <img src="img/appletv.jpg" width="100%">
         </div>
         <div class="text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Numquam amet eos fuga neque aliquam laudantium et aliquid. 
+            Voluptatem, officia. Ipsam ipsa nihil beatae velit recusandae 
+            nesciunt eaque non illum commodi.
+        </div>
+        <div class="text" style="clear: both;">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Numquam amet eos fuga neque aliquam laudantium et aliquid. 
+            Voluptatem, officia. Ipsam ipsa nihil beatae velit recusandae 
+            nesciunt eaque non illum commodi.
+        </div>
+        <div class="text" style="clear: both;">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
             Numquam amet eos fuga neque aliquam laudantium et aliquid. 
             Voluptatem, officia. Ipsam ipsa nihil beatae velit recusandae 
