--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
             </div>
         </div>
     </div>
+    <script>
+        $('.slide-box').eq(0).on('mousemove', (e)=>{
+            console.log(e.clientX);
+        })
+    </script>
 
     <button class="before"><</button>
     <button class="slide-1">1</button>
