--- a/study/study-06-switch.html
+++ b/study/study-06-switch.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-     <h4>물에 빠지면 누구먼저 구할 것인가?</h4>
 
+<body>
+    <h4>물에 빠지면 누구먼저 구할 것인가?</h4>
+    <button>와이프</button>
+    <button>부모님</button>
+    <button>반려동물</button>
 
     <script>
         
     </script>
 
 </body>
+
 </html>
