--- a/study/study-06-switch.html
+++ b/study/study-06-switch.html
@@ -11,13 +11,15 @@
     <h4>물에 빠지면 누구먼저 구할 것인가?</h4>
     <button onclick="test(1)">와이프</button>
     <button onclick="test(2)">부모님</button>
-    <button>반려동물</button>
+    <button onclick="test(3)">반려동물</button>
 
+    <h4>당신은 <span id="res"></span></h4>
     <script>
         const test = (req) => {
+            let res = document.querySelector('#res')
             switch (req) {
                 case 1:
-                    
+
                     break;
                 case 2:
                     
