--- a/study/web-test.html
+++ b/study/web-test.html
@@ -36,6 +36,14 @@
             height: 300px;
         }
 
+        .product-form {
+            width: 150px;
+            height: 300px;
+        }
+        .product-form img {
+            width: 100%;
+        }
+
         .cart-form{
             background: lightgray;
             width: 95%;
@@ -74,7 +82,9 @@
     <div class="container-form">
         <div class="container-product">
             <input type="text" id="find" placeholder="검색어 입력">
-            <div class="product-form"></div>
+            <div class="product-form">
+                <img src="../img/pr1.JPG">
+            </div>
         </div>
         
 
