--- a/study/web-test.html
+++ b/study/web-test.html
@@ -32,7 +32,8 @@
         }
 
         .container-product {
-            width: 100%;
+            background: white;
+            width: 150px;
             height: 300px;
         }
 
@@ -80,8 +81,8 @@
     
     <!-- Content -->
     <div class="container-form">
+        <input type="text" id="find" placeholder="검색어 입력">
         <div class="container-product">
-            <input type="text" id="find" placeholder="검색어 입력">
             <div class="product-form">
                 <img src="../img/pr1.JPG">
             </div>
@@ -97,11 +98,44 @@
 
 
     <script>
-        const dataAjax = async() => {
-            const response = await fetch('/study/store.json')
-            const result = response.json();
-            console.log(JSON.stringify(result));
+     const response = { 
+        "result" : "OK",
+        "value" : {
+            "products": [
+                {
+                    "id": 0,
+                    "title": "식기세척기",
+                    "brand": "세척나라",
+                    "photo": "pr1.jpg",
+                    "price": 10000
+                },
+                {
+                    "id": 1,
+                    "title": "원목 침대 프레임",
+                    "brand": "침대나라",
+                    "photo": "pr2.jpg",
+                    "price": 20000
+                },
+                {
+                    "id": 2,
+                    "title": "천연 디퓨저 세트",
+                    "brand": "향기나라",
+                    "photo": "pr3.jpg",
+                    "price": 30000
+                },
+                {
+                    "id": 3,
+                    "title": "시원한 서큘레이터",
+                    "brand": "바람나라",
+                    "photo": "pr4.jpg",
+                    "price": 40000
+                }
+            ]
         }
+    }
+
+    console.log(response);
+
     </script>
     
 </body>
