--- a/study/web-test.html
+++ b/study/web-test.html
@@ -85,6 +85,10 @@
         <div class="container-product">
             <div class="product-form">
                 <img src="../img/pr1.JPG">
+                <h4>식기세척기</h4>
+                <p>세척나라</p>
+                <p>가격 : 10000</p>
+                <button>담기</button>
             </div>
         </div>
         
