--- a/study/web-test.html
+++ b/study/web-test.html
@@ -28,13 +28,14 @@
         .container-form {
             background: #eee;
             width: 100%;
-            height: 500px;
+            height: 1000px;
             padding: 10px;
         }
         .container-form input {
             width: 150px;
             height: 20px;
-            margin: 10px;
+            margin-left: 5%;
+
         }
 
         .container-product {
@@ -48,19 +49,41 @@
 
         .product-form {
             background: white;
-            width: 150px;
+            width: 20%;
             padding: 10px;
             margin: 5px;
         }
         .product-form img {
             width: 100%;
         }
+        .product-form h4 {
+            margin-bottom: 3px;
+        }
+        .product-form p {
+            font-size: 12px;
+            color: grey;
+            margin-top: 1px;
+        }
+        .product-form span {
+            font-size: 16px;
+            display: block;
+            margin-bottom: 15px;
+        }
+        .product-form button {
+            background: black;
+            color: white;
+            font-size: 16px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
         .cart-form{
             background: lightgray;
-            width: 95%;
-            height: 200px;
+            width: 90%;
+            height: 400px;
             display: block;
+            margin-top: 60px;
             margin-left: auto;
             margin-right: auto;
         }
@@ -73,7 +96,7 @@
         .cart-add {
             background: black;
             width: 90%;
-            height: 150px;
+            height: 300px;
             display: block;
             margin-left: auto;
             margin-right: auto;
@@ -149,7 +172,7 @@
                 <img src="../img/${item.photo}">
                 <h4>${item.title}</h4>
                 <p>${item.brand}</p>
-                <p>가격 : ${item.price}</p>
+                <span>가격 : ${item.price}</span>
                 <button>담기</button>
             </div>`;
         $('.container-product').append(productItem);
