--- a/study/web-test.html
+++ b/study/web-test.html
@@ -51,10 +51,11 @@
             background: white;
             width: 20%;
             padding: 10px;
-            margin: 5px;
+            margin: 10px;
         }
         .product-form img {
             width: 100%;
+            height: 40%;
         }
         .product-form h4 {
             margin-bottom: 3px;
@@ -83,7 +84,6 @@
             width: 90%;
             height: 400px;
             display: block;
-            margin-top: 60px;
             margin-left: auto;
             margin-right: auto;
         }
